--- a/phynhancai.html
+++ b/phynhancai.html
@@ -359,11 +359,23 @@
         <a href="https://www.linkedin.com/in/luena-palhares-200441157/"target="_blank">
           <div class="u-list u-list-4">
             <div class="u-repeater u-repeater-4">
-              
               <div class="u-align-left u-container-style u-list-item u-repeater-item u-white u-list-item-3" data-href="" data-target="_blank">
                 <div class="u-container-layout u-similar-container u-container-layout-3">
                   <img class="u-image u-image-circle u-preserve-proportions u-image-5" src="./images/luena.jpeg" alt="" data-image-width="505" data-image-height="505">
                   <h4 class="u-text u-text-default u-text-3"> Luena Palhares&nbsp;&nbsp;</h4>
+                  <img class="u-image u-image-contain u-image-round u-radius-10 u-image-6" src="./images/umaia_logo.png" alt="" data-image-width="508" data-image-height="217" data-href="https://www.inesctec.pt/pt" data-target="_blank">
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>
+         <a href="https://www.linkedin.com/in/rogério-palma-leandro-da-silva-961b596b/" target="_blank">
+          <div class="u-list u-list-4">
+            <div class="u-repeater u-repeater-4">
+              <div class="u-align-left u-container-style u-list-item u-repeater-item u-white u-list-item-3" data-href="" data-target="_blank">
+                <div class="u-container-layout u-similar-container u-container-layout-3">
+                  <img class="u-image u-image-circle u-preserve-proportions u-image-5" src="./images/rogerio.jpeg" alt="" data-image-width="505" data-image-height="505">
+                  <h4 class="u-text u-text-default u-text-3">Rogério Silva</h4>
                   <img class="u-image u-image-contain u-image-round u-radius-10 u-image-6" src="./images/umaia_logo.png" alt="" data-image-width="508" data-image-height="217" data-href="https://www.inesctec.pt/pt" data-target="_blank">
                 </div>
               </div>
