--- a/phynhancai.html
+++ b/phynhancai.html
@@ -356,7 +356,10 @@
             </div>
           </div>
         </a>
-         
+       </div>
+     </section>
+     <section class="u-align-left u-clearfix u-grey-5 u-section-11" id="sec-e4931">
+      <div class="u-clearfix u-sheet u-sheet-1">
          <a href="https://www.linkedin.com/in/luena-palhares-200441157/"target="_blank">
           <div class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-list u-list-1">
             <div class="u-repeater u-repeater-1">
