--- a/phynhancai.html
+++ b/phynhancai.html
@@ -376,7 +376,7 @@
         <div class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-list u-list-2">
           <div class="u-repeater u-repeater-2"></div>
         </div>
-        <a href="https://www.linkedin.com/in/joaquim-monteiro-pratas-98b28a9/"target="_blank">
+        <a href="https://www.linkedin.com/in/rogério-palma-leandro-da-silva-961b596b/"target="_blank">
           <div class="u-list u-list-3">
             <div class="u-repeater u-repeater-3">
               
